<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/titleTextView"
        app:layout_constraintRight_toRightOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:text="@string/authors" />

    <TextView
        android:id="@+id/disclaimerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/disclaimer" />

    <EditText
        android:id="@+id/heightMajorTextEntry"
        android:inputType="number"
        android:layout_width="150sp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView" />

    <EditText
        android:id="@+id/heightMinorTextEntry"
        android:inputType="number"
        android:layout_width="150sp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView" />

    <TextView
        android:id="@+id/heightMajorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/heightMajorTextEntry"
        app:layout_constraintEnd_toEndOf="@+id/heightMajorTextEntry"
        app:layout_constraintStart_toStartOf="@+id/heightMajorTextEntry"
        android:text="@string/height_major_label" />

    <TextView
        android:id="@+id/heightMinorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/heightMinorTextEntry"
        app:layout_constraintEnd_toEndOf="@+id/heightMinorTextEntry"
        app:layout_constraintStart_toStartOf="@+id/heightMinorTextEntry"
        android:text="@string/height_minor_label" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/weightTextEntry"
        app:layout_constraintEnd_toEndOf="@+id/weightTextEntry"
        app:layout_constraintStart_toStartOf="@+id/weightTextEntry"
        android:text="@string/weight_label" />

    <EditText
        android:id="@+id/weightTextEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleTextView" />

    <TextView
        android:id="@+id/bmiResultLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/bmiResultTextView"
        app:layout_constraintStart_toStartOf="@+id/bmiResultTextView"
        app:layout_constraintTop_toBottomOf="@+id/weightTextEntry"
        android:text="@string/bmi_result_label" />

    <TextView
        android:id="@+id/bmiResultLabelTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/bmiClassTextView"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/bmiClassTextView"
        app:layout_constraintTop_toBottomOf="@+id/weightTextEntry"
        android:text="@string/bmi_result_label" />

    <TextView
        android:id="@+id/bmiResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="0.00"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiResultLabelTextView" />

    <TextView
        android:id="@+id/bmiClassTextView"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:gravity="center"
        android:text="Very Severely Underweight"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bmiResultTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bmiResultTextView" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onClickCalculate"
        android:text="@string/calculate_bmi"
        app:layout_constraintBottom_toTopOf="@id/disclaimerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiClassTextView" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/calculateButton"
        app:layout_constraintEnd_toEndOf="@id/calculateButton"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        android:layout_marginTop="8sp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/imperialRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/imperial_label" />

            <RadioButton
                android:id="@+id/metricRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/metric_label" />
        </LinearLayout>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>